# pandera-modin-index-type-repro

./: pyproject.toml
repro/: __main__.py
