[tool.poetry]
name = "repro"
version = "0.1.0"
description = "Repro repository for an issue with pandera[modin-ray]"
authors = ["Zev Isert <dev@zevisert.ca>"]

[tool.poetry.dependencies]
python = "^3.9"
pandera = {extras = ["modin-ray"], version = "^0.8.0"}

[tool.poetry.scripts]
repro = "repro.__main__:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
